@@ -1,0 +1,3 @@
+Ruby-GNOME 2 is a set of Ruby language bindings for the various
+application development libraries included with the GNOME/GTK+
+environment.
