@@ -1,0 +1,1 @@
+@comment $NetBSD: PLIST,v 1.1 2006/01/15 16:52:09 minskim Exp $
